error.txt
ListExamples.java:15: error: ';' expected
        result.add(0, s)
                        ^
1 error
